# SoloCafe

./: README.md  ReadMe.txt  forms.py  main.py  pyproject.toml
static/: style.css
templates/: cafe.html  customer.html  home.html  index.html  manager.html  signup.html  user.html
