[tool.poetry]
name = "repl_python3_SoloCafe"
version = "0.1.0"
description = ""
authors = ["JanErik <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^1.0.1"
flask = "^2.0.1"
pandas = "^1.2.5"
flask-wtf = "^0.15.1"
wtforms = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
